SERVER-21363 Check whether to close connection after receiving response.